--- a/du_doan_gia_nha.ipynb
+++ b/du_doan_gia_nha.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e6e6b777",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
     }
    ],
    "source": [
-    "# Kiểm tra dữ liệu thiếu\n",
+    "# Kiểm tra dữ liệu thiếuuu\n",
     "df.isnull().sum()\n"
    ]
   },
