--- a/du_doan_gia_nha.ipynb
+++ b/du_doan_gia_nha.ipynb
@@ -188,6 +188,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bd3c0bd8",
+   "metadata": {},
+   "source": [
+    "#hello"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "12ecb1c9",
@@ -200,6 +208,16 @@
     "\n",
     "# Chia thành tập huấn luyện và kiểm tra\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "148e5129",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#e"
    ]
   },
   {
