--- a/du_doan_gia_nha.ipynb
+++ b/du_doan_gia_nha.ipynb
@@ -740,6 +740,30 @@
     "plt.plot([y_test.min(), y_test.max()], [y_test.min(), y_test.max()], 'r--')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "218934d8",
+   "metadata": {},
+   "source": [
+    "#khong\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "237e2452",
+   "metadata": {},
+   "source": [
+    "# jeje"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be0b9055",
+   "metadata": {},
+   "source": [
+    "ok"
+   ]
   }
  ],
  "metadata": {
