--- a/du_doan_gia_nha.ipynb
+++ b/du_doan_gia_nha.ipynb
@@ -197,12 +197,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "12ecb1c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Chia dữ liệu thành biến đầu vào X và đầu ra y\n",
+    "# Chia dữ liệu thành biến đầu vào X và đầu ra yy\n",
     "X = df.drop('MedHouseVal', axis=1)\n",
     "y = df['MedHouseVal']\n",
     "\n",
