--- a/du_doan_gia_nha.ipynb
+++ b/du_doan_gia_nha.ipynb
@@ -202,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Chia dữ liệu thành biến đầu vào X và đầu ra y yyy \n",
+    "# Chia dữ liệu thành biến đầu vào X và đầu ra y yyy yy\n",
     "X = df.drop('MedHouseVal', axis=1)\n",
     "y = df['MedHouseVal']\n",
     "\n",
