--- a/du_doan_gia_nha.ipynb
+++ b/du_doan_gia_nha.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "148e5129",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
     }
    ],
    "source": [
-    "#e33# Tạo mô hình hồi quy tuyến tính\n",
+    "#e33# Tạo mô hình hồi quy tuyến tính nh\n",
     "model = LinearRegression()\n",
     "model.fit(X_train, y_train)"
    ]
