--- a/du_doan_gia_nha.ipynb
+++ b/du_doan_gia_nha.ipynb
@@ -229,7 +229,7 @@
     }
    ],
    "source": [
-    "#e33# Tạo mô hình hồi quy tuyến tính nh\n",
+    "#e33# Tạo mô hình hồi quy tuyến tính nhvugh\n",
     "model = LinearRegression()\n",
     "model.fit(X_train, y_train)"
    ]
